--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,6 @@ ENV/
 modules/botToken.py
 
 #data storage
-db/adminweenie.json
-db/quoteweenie.json
-db/prefix.json
+adminweenie.json
+quoteweenie.json
+prefix.json
